# glfwPI

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: FindCXX11.cmake  FindPulseAudio.cmake  FindPulseAudioSimple.cmake  Findlibsndfile.cmake
cmake/cmake_helpers/: importURLProject.CMakeLists.txt.in  importURLProject.cmake
cmake/depends/GLFW/: CMakeLists.txt.in  GLFW-CMakeLists.txt.in  add_GLFW.cmake
cmake/depends/PictureIt/: CMakeLists.txt.in  PictureIt-CMakeLists.txt.in  add_PictureIt.cmake
src/: audio.cpp  audio.hpp  audio_player.cpp  audio_player.hpp  main.cpp  pulse.cpp  pulse.hpp
